crates/core/tests/snapshots/schematic_macro_test__generics__supports_bounds.snap
---
source: crates/core/tests/schematic_macro_test.rs
expression: pretty(output.to_token_stream())
---
#[automatically_derived]
impl<T: Schematic + Clone> schematic::Schematic for Example<T> {
    fn schema_name() -> Option<String> {
        Some("Example".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema
            .structure(
                StructType::new([
                    ("inner".into(), SchemaField::new(schema.infer::<T>())),
                ]),
            )
    }
}
