crates/core/tests/snapshots/schematic_macro_test__generics__supports_lifetimes_and_defaults.snap
---
source: crates/core/tests/schematic_macro_test.rs
expression: pretty(output.to_token_stream())
---
#[automatically_derived]
impl<'a, T> schematic::Schematic for Example<'a, T> {
    fn schema_name() -> Option<String> {
        Some("Example".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema
            .structure(
                StructType::new([
                    ("inner".into(), SchemaField::new(schema.infer::<T>())),
                    ("name".into(), SchemaField::new(schema.infer::<&'a str>())),
                ]),
            )
    }
}
